@@ -1,3 +1,8 @@
+2014-04-17  Chris Manghane  <cmang@google.com>
+
+	* go-gcc.cc (Gcc_backend::named_constant_expression): New
+	function.
+
 2014-04-14  Chris Manghane  <cmang@google.com>
 
 	* go-gcc.cc: Include "convert.h".
